# demo_http_mcp

./: .envrc  .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml  ruff.toml
.claude/: setting.json
.claude/agents/: impact-assessor.md  security-auditor.md
.claude/skills/analyzing-impact/: SKILL.md
.claude/skills/guiding-secure-development/: SKILL.md
.claude/skills/guiding-secure-development/references/: hardening-checklist.md
.cursor/: mcp.json
.gemini/: settings.json
.githooks/: pre-push
app/: app.py  chat_app.html  chat_app.ts  main.py
app/prompts/: nvd_search.py
app/tools/: __init__.py  models.py  nvd_dal.py
backend/: .envrc  .gitignore  pyproject.toml  ruff.toml
backend/app/: agen_memory.py  agent.py  app.py  config.py  main.py
backend/app/auth0/: __init__.py  client_store.py
backend/app/prompts/: __init__.py  nvd_search.py
backend/app/tools/: __init__.py  models.py  nvd_dal.py
backend/tests/: conftest.py  test_auth0.py  test_auth0_integration.py  test_mcp_integration.py  test_models.py  test_nvd_dal.py
docs/superpowers/plans/: 2026-04-03-stream-tool-events.md
docs/superpowers/specs/: 2026-04-03-stream-tool-events-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: ChatApp.tsx  ChatInput.tsx  MessageBubble.tsx  MessageList.tsx  ThinkingCard.tsx  ToolCard.tsx
