[project]
name = "test-http-mcp"
authors = [{ name = "Yeison Liscano", email = "yliscanoc@gmail.com" }]
maintainers = [{ name = "Yeison Liscano", email = "yliscanoc@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["mcp", "llm", "automation", "http"]
description = "This is a HTTP implementation of the MCP protocol"
license = "MIT"
license-files = ["../LICENSE"]
requires-python = ">=3.13,<3.14"
version = "0.0.1"

dependencies = [
    "pydantic==2.12.5",
    "uvicorn==0.41.0",
    "starlette==0.52.1",
    "http-mcp[auth]==0.12.0",
    "fastapi==0.135.3",
    "logfire[fastapi,sqlite3]==4.16.0",
    "pydantic-ai==1.77.0",
    "nvdlib==0.8.3",
    "mcp>=1.23.0",
    "auth0-api-python>=1.0.0b6",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mdformat==1.0.0",
    "mypy==1.19.0",
    "pytest==9.0.2",
    "ruff==0.14.8",
    "pytest-cov==7.0.0",
    "pytest-asyncio>=0.24.0",
    "py-mocks==0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
run-app = "app.main:run_http"
run-stdio = "app.main:run_stdio"
run-app-local = "app.app:main"

[project.urls]
Homepage = "https://github.com/yeison-liscano/test-http-mcp"
Issues = "https://github.com/yeison-liscano/test-http-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
